SERVER-47898: Advancing lastDurable should advance lastApplied